fix: Add spacing on label and form fields

--- a/cmd/doggo/api/assets/style.css
+++ b/cmd/doggo/api/assets/style.css
@@ -52,6 +52,7 @@ input, select, button {
 
 label {
 	display: block;
+	padding-bottom: 0.5rem;
 }
 
 .box {
